# net-serial-console-rs

./: CLAUDE.md  Cargo.toml  README.md  build.rs  rust-toolchain.toml
src/: event.rs  lib.rs  main.rs  startup.rs
templates/: console.html.stpl
