# Cargo.toml

[package]
name = "net-serial-console"
version = "0.4.1"
authors = ["Sami J. Mäkinen <sjm@iki.fi>"]
description = "Serial console tcp server/multiplexer and web client"
repository = "https://github.com/sjm42/net-serial-console-rs"
readme = "README.md"
keywords = ["serial", "console", "multiplex"]
license = "MIT OR Apache-2.0"
edition = "2021"
resolver = "2"


[dependencies]
anyhow = "1.0"
bytes = "1.3"
chrono = "0.4"
env_logger = "0.10"
hyper = { version = "0.14", features = ["full"] }
log = "0.4"
sailfish = "0.5"
structopt = "0.3"
tokio = { version = "1.23", features = ["full"] }
tokio-serial = "5.4"
tokio-util = { version = "0.7", features = ["full"] }


[build-dependencies]
build-data = "0.1"


[profile.release]
lto = true
opt-level = 3 #default
# opt-level = 'z'  # Optimize for size.

# EOF
