# Cargo.toml

[package]
name = "net-serial-console"
version = "0.5.0"
authors = ["Sami J. Mäkinen <sjm@iki.fi>"]
description = "Serial console tcp server/multiplexer and web client"
repository = "https://github.com/sjm42/net-serial-console-rs"
readme = "README.md"
keywords = ["serial", "console", "multiplex"]
license = "MIT OR Apache-2.0"
edition = "2021"
resolver = "2"


[dependencies]
anyhow = "1"
axum = { version = "0", features = ["http1", "json"] }
axum-macros = "0"
bytes = "1"
chrono = "0"
clap = { version = "4", features = ["derive"] }
futures = "0"
hyper = { version = "1", features = ["full"] }
sailfish = "0"
tokio = { version = "1", features = ["full"] }
tokio-serial = "5"
tokio-util = { version = "0", features = ["full"] }
tower-http = { version = "0" }
tracing = { version = "0", features = ["log"] }
tracing-subscriber = "0"


[build-dependencies]
build-data = "0.1"


[profile.release]
lto = "fat"
opt-level = 3

# EOF
